# darkglitch

./: .env  .env.example  .gitignore  LICENSE  README.md  TODO.md  darkglitch.py  helper.py  install.sh  main.py  pyproject.toml  requirements.txt  version.py
ai/: base.py  ollama_provider.py
ai_utils/: ai.py
command/: __init__.py  bash_connect.py  camera.py  connect.py  download_file.py  execute_chain.py  listen.py  listen_bash.py  listen_stream.py  online.py  receive_command.py  send_command.py  stream_connect.py
command/ai_bash/: bash_prompt.py
command/bash/: bash_all.py  bash_connect.py  shell.py  stream_connect.py
command/list/: online_list.py
command/listen/: listener.py
command/listener/: listen_bash.py  listen_stream.py
command/run/: build_exe.py  listener_exe_entry.py
command/transfer/: file.py  transfer_file.py
command_injection/: injector.py  receive_command.py  send_command.py
core/: __init__.py  client.py  config.py
core/ai/: base.py
core/ai/groq/: groq_provider.py
core/data/: client.py  config.py
darkglitch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
injection_utils/: remote_command_handler.py
injector/: command_injector.py
malware_signal/: peer.py  signal.py
malware_signal/handler/: debug_handler.py  online_handler.py
media/: local_media.py  media.py  receiver.py  receiver_media.py  web_cam.py
media_utils/: media.py
signaling/: __init__.py  handlers.py  peer.py  signal.py
tests/: test_ai_bash_prompt.py  test_file_transfer.py  test_main.py
transfer_utils/: transfer.py
utils/: banner.py  colors.py  helper.py  version.py
(+1 files in other folders)
